manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "k8s-84c7"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "k8s-84c7"
    spec:
      containers:
        - name: "k8s-84c7"
          image: "textilo.azurecr.io/k8s"
          ports:
          - containerPort: 80
  selector:
    matchLabels:
      name: "k8s-84c7"
