manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "k8s-84c7"
    labels:
        app: "k8s-84c7"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "k8s-84c7"
